--- a/frontend/rumahsakit/src/index.css
+++ b/frontend/rumahsakit/src/index.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+US+Trad:wght@100..400&display=swap');
+
+.origin-top {
+    transform-origin: top ;
+}
